src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ecafile
Rule 1     ecafile -> import
Rule 2     ecafile -> constant
Rule 3     ecafile -> declaration
Rule 4     ecafile -> ecarule
Rule 5     ecafile -> NEWLINE
Rule 6     ecafile -> import ecafile
Rule 7     ecafile -> celldef ecafile
Rule 8     ecafile -> constant ecafile
Rule 9     ecafile -> declaration ecafile
Rule 10    ecafile -> ecarule ecafile
Rule 11    ecafile -> NEWLINE ecafile
Rule 12    import -> IMPORT CNAME NEWLINE
Rule 13    celldef -> CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
Rule 14    celldef -> CELL stringval dictvalue NEWLINE
Rule 15    constant -> CONSTANT CNAME EQUALS expression NEWLINE
Rule 16    declaration -> DECLARE CNAME NEWLINE
Rule 17    declaration -> DECLARE assign NEWLINE
Rule 18    opt_rulename -> RULE CNAME NEWLINE
Rule 19    opt_rulename -> <empty>
Rule 20    ecarule -> opt_rulename event action
Rule 21    ecarule -> opt_rulename event condition action
Rule 22    event -> EVENT CNAME newline
Rule 23    condition -> CONDITION expression newline
Rule 24    action -> ACTION calls
Rule 25    action_statement -> expression
Rule 26    action_statement -> assign
Rule 27    calls -> action_statement newline
Rule 28    calls -> action_statement newline calls
Rule 29    expression -> expression POINT CNAME LPAREN expressionlist RPAREN
Rule 30    expression -> expression POINT CNAME LPAREN RPAREN
Rule 31    expression -> expression POINT CNAME
Rule 32    expression -> CNAME LPAREN expressionlist RPAREN
Rule 33    expression -> CNAME LPAREN RPAREN
Rule 34    expressionlist -> expression
Rule 35    expressionlist -> expression COMMA expressionlist
Rule 36    expression -> expression LSBRACK expression RSBRACK
Rule 37    expression -> LPAREN expression RPAREN
Rule 38    expression -> CNAME
Rule 39    expression -> NUMBER
Rule 40    expression -> MINUS expression
Rule 41    expression -> stringval
Rule 42    expression -> TRUE
Rule 43    expression -> FALSE
Rule 44    expression -> NONE
Rule 45    expression -> LSBRACK listitems RSBRACK
Rule 46    expression -> LSBRACK RSBRACK
Rule 47    listitems -> expression
Rule 48    listitems -> expression COMMA listitems
Rule 49    expression -> dictvalue
Rule 50    dictvalue -> LCBRACK dictitems RCBRACK
Rule 51    dictvalue -> LCBRACK RCBRACK
Rule 52    dicttag -> CNAME
Rule 53    dicttag -> stringval
Rule 54    dictitems -> dicttag COLON expression
Rule 55    dictitems -> dicttag COLON expression COMMA dictitems
Rule 56    expression -> NEWEVENT CNAME dictvalue
Rule 57    assign -> CNAME EQUALS expression
Rule 58    assign -> CNAME LSBRACK expression RSBRACK EQUALS expression
Rule 59    expression -> expression COMPARE expression
Rule 60    expression -> NOT expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> expression AND expression
Rule 63    expression -> expression IN expression
Rule 64    expression -> expression MODULO expression
Rule 65    expression -> expression PLUS expression
Rule 66    expression -> expression MINUS expression
Rule 67    expression -> expression TIMDIV expression
Rule 68    expression -> IF expression THEN action_statement ELSE action_statement
Rule 69    forall_header -> FORALL CNAME
Rule 70    expression -> forall_header IN expression COLON action_statement
Rule 71    stringval -> STRING
Rule 72    newline -> NEWLINE
Rule 73    newline -> NEWLINE newline

Terminals, with rules where they appear

ACTION               : 24
AND                  : 62
CELL                 : 13 14
CNAME                : 12 15 16 18 22 29 30 31 32 33 38 52 56 57 58 69
COLON                : 54 55 70
COMMA                : 35 48 55
COMPARE              : 59
CONDITION            : 23
CONSTANT             : 15
DECLARE              : 16 17
ELSE                 : 68
EQUALS               : 15 57 58
EVENT                : 22
FALSE                : 43
FORALL               : 69
GADGET               : 13
IF                   : 68
IMPORT               : 12
IN                   : 63 70
LCBRACK              : 50 51
LPAREN               : 29 30 32 33 37
LSBRACK              : 36 45 46 58
MINUS                : 40 66
MODULO               : 64
NEWEVENT             : 56
NEWLINE              : 5 11 12 13 14 15 16 17 18 72 73
NONE                 : 44
NOT                  : 60
NUMBER               : 39
OPTIONS              : 13
OR                   : 61
PLUS                 : 65
POINT                : 29 30 31
RCBRACK              : 50 51
RPAREN               : 29 30 32 33 37
RSBRACK              : 36 45 46 58
RULE                 : 18
STRING               : 71
THEN                 : 68
TIMDIV               : 67
TRUE                 : 42
error                : 

Nonterminals, with rules where they appear

action               : 20 21
action_statement     : 27 28 68 68 70
assign               : 17 26
calls                : 24 28
celldef              : 7
condition            : 21
constant             : 2 8
declaration          : 3 9
dictitems            : 50 55
dicttag              : 54 55
dictvalue            : 13 14 49 56
ecafile              : 6 7 8 9 10 11 0
ecarule              : 4 10
event                : 20 21
expression           : 15 23 25 29 30 31 34 35 36 36 37 40 47 48 54 55 57 58 58 59 59 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 70
expressionlist       : 29 32 35
forall_header        : 70
import               : 1 6
listitems            : 45 48
newline              : 22 23 27 28 73
opt_rulename         : 20 21
stringval            : 13 13 14 41 53

Parsing method: LALR

state 0

    (0) S' -> . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecafile                        shift and go to state 1
    ecarule                        shift and go to state 9
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 1

    (0) S' -> ecafile .



state 2

    (2) ecafile -> constant .
    (8) ecafile -> constant . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    $end            reduce using rule 2 (ecafile -> constant .)
    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecafile                        shift and go to state 14
    ecarule                        shift and go to state 9
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 3

    (5) ecafile -> NEWLINE .
    (11) ecafile -> NEWLINE . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    $end            reduce using rule 5 (ecafile -> NEWLINE .)
    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecafile                        shift and go to state 15
    ecarule                        shift and go to state 9
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 4

    (3) ecafile -> declaration .
    (9) ecafile -> declaration . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    $end            reduce using rule 3 (ecafile -> declaration .)
    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecafile                        shift and go to state 16
    ecarule                        shift and go to state 9
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 5

    (15) constant -> CONSTANT . CNAME EQUALS expression NEWLINE

    CNAME           shift and go to state 17


state 6

    (13) celldef -> CELL . stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> CELL . stringval dictvalue NEWLINE
    (71) stringval -> . STRING

    STRING          shift and go to state 18

    stringval                      shift and go to state 19

state 7

    (7) ecafile -> celldef . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecafile                        shift and go to state 20
    ecarule                        shift and go to state 9
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 8

    (1) ecafile -> import .
    (6) ecafile -> import . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    $end            reduce using rule 1 (ecafile -> import .)
    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecafile                        shift and go to state 21
    ecarule                        shift and go to state 9
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 9

    (4) ecafile -> ecarule .
    (10) ecafile -> ecarule . ecafile
    (1) ecafile -> . import
    (2) ecafile -> . constant
    (3) ecafile -> . declaration
    (4) ecafile -> . ecarule
    (5) ecafile -> . NEWLINE
    (6) ecafile -> . import ecafile
    (7) ecafile -> . celldef ecafile
    (8) ecafile -> . constant ecafile
    (9) ecafile -> . declaration ecafile
    (10) ecafile -> . ecarule ecafile
    (11) ecafile -> . NEWLINE ecafile
    (12) import -> . IMPORT CNAME NEWLINE
    (15) constant -> . CONSTANT CNAME EQUALS expression NEWLINE
    (16) declaration -> . DECLARE CNAME NEWLINE
    (17) declaration -> . DECLARE assign NEWLINE
    (20) ecarule -> . opt_rulename event action
    (21) ecarule -> . opt_rulename event condition action
    (13) celldef -> . CELL stringval GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> . CELL stringval dictvalue NEWLINE
    (18) opt_rulename -> . RULE CNAME NEWLINE
    (19) opt_rulename -> .

    $end            reduce using rule 4 (ecafile -> ecarule .)
    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 13
    CONSTANT        shift and go to state 5
    DECLARE         shift and go to state 12
    CELL            shift and go to state 6
    RULE            shift and go to state 11
    EVENT           reduce using rule 19 (opt_rulename -> .)

    ecarule                        shift and go to state 9
    ecafile                        shift and go to state 22
    constant                       shift and go to state 2
    opt_rulename                   shift and go to state 10
    declaration                    shift and go to state 4
    import                         shift and go to state 8
    celldef                        shift and go to state 7

state 10

    (20) ecarule -> opt_rulename . event action
    (21) ecarule -> opt_rulename . event condition action
    (22) event -> . EVENT CNAME newline

    EVENT           shift and go to state 23

    event                          shift and go to state 24

state 11

    (18) opt_rulename -> RULE . CNAME NEWLINE

    CNAME           shift and go to state 25


state 12

    (16) declaration -> DECLARE . CNAME NEWLINE
    (17) declaration -> DECLARE . assign NEWLINE
    (57) assign -> . CNAME EQUALS expression
    (58) assign -> . CNAME LSBRACK expression RSBRACK EQUALS expression

    CNAME           shift and go to state 26

    assign                         shift and go to state 27

state 13

    (12) import -> IMPORT . CNAME NEWLINE

    CNAME           shift and go to state 28


state 14

    (8) ecafile -> constant ecafile .

    $end            reduce using rule 8 (ecafile -> constant ecafile .)


state 15

    (11) ecafile -> NEWLINE ecafile .

    $end            reduce using rule 11 (ecafile -> NEWLINE ecafile .)


state 16

    (9) ecafile -> declaration ecafile .

    $end            reduce using rule 9 (ecafile -> declaration ecafile .)


state 17

    (15) constant -> CONSTANT CNAME . EQUALS expression NEWLINE

    EQUALS          shift and go to state 29


state 18

    (71) stringval -> STRING .

    THEN            reduce using rule 71 (stringval -> STRING .)
    POINT           reduce using rule 71 (stringval -> STRING .)
    LSBRACK         reduce using rule 71 (stringval -> STRING .)
    COMPARE         reduce using rule 71 (stringval -> STRING .)
    OR              reduce using rule 71 (stringval -> STRING .)
    AND             reduce using rule 71 (stringval -> STRING .)
    IN              reduce using rule 71 (stringval -> STRING .)
    MODULO          reduce using rule 71 (stringval -> STRING .)
    PLUS            reduce using rule 71 (stringval -> STRING .)
    MINUS           reduce using rule 71 (stringval -> STRING .)
    TIMDIV          reduce using rule 71 (stringval -> STRING .)
    COLON           reduce using rule 71 (stringval -> STRING .)
    COMMA           reduce using rule 71 (stringval -> STRING .)
    RSBRACK         reduce using rule 71 (stringval -> STRING .)
    NEWLINE         reduce using rule 71 (stringval -> STRING .)
    ELSE            reduce using rule 71 (stringval -> STRING .)
    RPAREN          reduce using rule 71 (stringval -> STRING .)
    RCBRACK         reduce using rule 71 (stringval -> STRING .)
    OPTIONS         reduce using rule 71 (stringval -> STRING .)
    GADGET          reduce using rule 71 (stringval -> STRING .)
    LCBRACK         reduce using rule 71 (stringval -> STRING .)


state 19

    (13) celldef -> CELL stringval . GADGET stringval OPTIONS dictvalue NEWLINE
    (14) celldef -> CELL stringval . dictvalue NEWLINE
    (50) dictvalue -> . LCBRACK dictitems RCBRACK
    (51) dictvalue -> . LCBRACK RCBRACK

    GADGET          shift and go to state 31
    LCBRACK         shift and go to state 30

    dictvalue                      shift and go to state 32

state 20

    (7) ecafile -> celldef ecafile .

    $end            reduce using rule 7 (ecafile -> celldef ecafile .)


state 21

    (6) ecafile -> import ecafile .

    $end            reduce using rule 6 (ecafile -> import ecafile .)


state 22

    (10) ecafile -> ecarule ecafile .

    $end            reduce using rule 10 (ecafile -> ecarule ecafile .)


state 23

    (22) event -> EVENT . CNAME newline

    CNAME           shift and go to state 33


state 24

    (20) ecarule -> opt_rulename event . action
    (21) ecarule -> opt_rulename event . condition action
    (24) action -> . ACTION calls
    (23) condition -> . CONDITION expression newline

    ACTION          shift and go to state 37
    CONDITION       shift and go to state 34

    action                         shift and go to state 36
    condition                      shift and go to state 35

state 25

    (18) opt_rulename -> RULE CNAME . NEWLINE

    NEWLINE         shift and go to state 38


state 26

    (16) declaration -> DECLARE CNAME . NEWLINE
    (57) assign -> CNAME . EQUALS expression
    (58) assign -> CNAME . LSBRACK expression RSBRACK EQUALS expression

    NEWLINE         shift and go to state 40
    EQUALS          shift and go to state 41
    LSBRACK         shift and go to state 39


state 27

    (17) declaration -> DECLARE assign . NEWLINE

    NEWLINE         shift and go to state 42


state 28

    (12) import -> IMPORT CNAME . NEWLINE

    NEWLINE         shift and go to state 43


state 29

    (15) constant -> CONSTANT CNAME EQUALS . expression NEWLINE
    (29) expression -> . expression POINT CNAME LPAREN expressionlist RPAREN
    (30) expression -> . expression POINT CNAME LPAREN RPAREN
    (31) expression -> . expression POINT CNAME
    (32) expression -> . CNAME LPAREN expressionlist RPAREN
    (33) expression -> . CNAME LPAREN RPAREN
    (36) expression -> . expression LSBRACK expression RSBRACK
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . CNAME
    (39) expression -> . NUMBER
    (40) expression -> . MINUS expression
    (41) expression -> . stringval
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . NONE
    (45) expression -> . LSBRACK listitems RSBRACK
    (46) expression -> . LSBRACK RSBRACK
    (49) expression -> . dictvalue
    (56) expression -> . NEWEVENT CNAME dictvalue
    (59) expression -> . expression COMPARE expression
    (60) expression -> . NOT expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression AND expression
    (63) expression -> . expression IN expression
    (64) expression -> . expression MODULO expression
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression TIMDIV expression
    (68) expression -> . IF expression THEN action_statement ELSE action_statement
    (70) expression -> . forall_header IN expression COLON action_statement
    (71) stringval -> . STRING
    (50) dictvalue -> . LCBRACK dictitems RCBRACK
    (51) dictvalue -> . LCBRACK RCBRACK
    (69) forall_header -> . FORALL CNAME

    CNAME           shift and go to state 54
    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 56
    MINUS           shift and go to state 48
    TRUE            shift and go to state 51
    FALSE           shift and go to state 55
    NONE            shift and go to state 58
    LSBRACK         shift and go to state 53
    NEWEVENT        shift and go to state 49
    NOT             shift and go to state 57
    IF              shift and go to state 44
    STRING          shift and go to state 18
    LCBRACK         shift and go to state 30
    FORALL          shift and go to state 50

    stringval                      shift and go to state 45
    expression                     shift and go to state 46
    dictvalue                      shift and go to state 52
    forall_header                  shift and go to state 59

state 30

    (50) dictvalue -> LCBRACK . dictitems RCBRACK
    (51) dictvalue -> LCBRACK . RCBRACK
    (54) dictitems -> . dicttag COLON expression
    (55) dictitems -> . dicttag COLON expression COMMA dictitems
    (52) dicttag -> . CNAME
    (53) dicttag -> . stringval
    (71) stringval -> . STRING

    RCBRACK         shift and go to state 62
    CNAME           shift and go to state 60
    STRING          shift and go to state 18

    dictitems                      shift and go to state 63
    dicttag                        shift and go to state 64
    stringval                      shift and go to state 61

state 31

    (13) celldef -> CELL stringval GADGET . stringval OPTIONS dictvalue NEWLINE
    (71) stringval -> . STRING

    STRING          shift and go to state 18

    stringval                      shift and go to state 65

state 32

    (14) celldef -> CELL stringval dictvalue . NEWLINE

    NEWLINE         shift and go to state 66


state 33

    (22) event -> EVENT CNAME . newline
    (72) newline -> . NEWLINE
    (73) newline -> . NEWLINE newline

    NEWLINE         shift and go to state 68

    newline                        shift and go to state 67

state 34

    (23) condition -> CONDITION . expression newline
    (29) expression -> . expression POINT CNAME LPAREN expressionlist RPAREN
    (30) expression -> . expression POINT CNAME LPAREN RPAREN
    (31) expression -> . expression POINT CNAME
    (32) expression -> . CNAME LPAREN expressionlist RPAREN
    (33) expression -> . CNAME LPAREN RPAREN
    (36) expression -> . expression LSBRACK expression RSBRACK
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . CNAME
    (39) expression -> . NUMBER
    (40) expression -> . MINUS expression
    (41) expression -> . stringval
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . NONE
    (45) expression -> . LSBRACK listitems RSBRACK
    (46) expression -> . LSBRACK RSBRACK
    (49) expression -> . dictvalue
    (56) expression -> . NEWEVENT CNAME dictvalue
    (59) expression -> . expression COMPARE expression
    (60) expression -> . NOT expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression AND expression
    (63) expression -> . expression IN expression
    (64) expression -> . expression MODULO expression
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression TIMDIV expression
    (68) expression -> . IF expression THEN action_statement ELSE action_statement
    (70) expression -> . forall_header IN expression COLON action_statement
    (71) stringval -> . STRING
    (50) dictvalue -> . LCBRACK dictitems RCBRACK
    (51) dictvalue -> . LCBRACK RCBRACK
    (69) forall_header -> . FORALL CNAME

    CNAME           shift and go to state 54
    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 56
    MINUS           shift and go to state 48
    TRUE            shift and go to state 51
    FALSE           shift and go to state 55
    NONE            shift and go to state 58
    LSBRACK         shift and go to state 53
    NEWEVENT        shift and go to state 49
    NOT             shift and go to state 57
    IF              shift and go to state 44
    STRING          shift and go to state 18
    LCBRACK         shift and go to state 30
    FORALL          shift and go to state 50

    stringval                      shift and go to state 45
    expression                     shift and go to state 69
    dictvalue                      shift and go to state 52
    forall_header                  shift and go to state 59

state 35

    (21) ecarule -> opt_rulename event condition . action
    (24) action -> . ACTION calls

    ACTION          shift and go to state 37

    action                         shift and go to state 70

state 36

    (20) ecarule -> opt_rulename event action .

    NEWLINE         reduce using rule 20 (ecarule -> opt_rulename event action .)
    IMPORT          reduce using rule 20 (ecarule -> opt_rulename event action .)
    CONSTANT        reduce using rule 20 (ecarule -> opt_rulename event action .)
    DECLARE         reduce using rule 20 (ecarule -> opt_rulename event action .)
    CELL            reduce using rule 20 (ecarule -> opt_rulename event action .)
    RULE            reduce using rule 20 (ecarule -> opt_rulename event action .)
    EVENT           reduce using rule 20 (ecarule -> opt_rulename event action .)
    $end            reduce using rule 20 (ecarule -> opt_rulename event action .)


state 37

    (24) action -> ACTION . calls
    (27) calls -> . action_statement newline
    (28) calls -> . action_statement newline calls
    (25) action_statement -> . expression
    (26) action_statement -> . assign
    (29) expression -> . expression POINT CNAME LPAREN expressionlist RPAREN
    (30) expression -> . expression POINT CNAME LPAREN RPAREN
    (31) expression -> . expression POINT CNAME
    (32) expression -> . CNAME LPAREN expressionlist RPAREN
    (33) expression -> . CNAME LPAREN RPAREN
    (36) expression -> . expression LSBRACK expression RSBRACK
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . CNAME
    (39) expression -> . NUMBER
    (40) expression -> . MINUS expression
    (41) expression -> . stringval
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . NONE
    (45) expression -> . LSBRACK listitems RSBRACK
    (46) expression -> . LSBRACK RSBRACK
    (49) expression -> . dictvalue
    (56) expression -> . NEWEVENT CNAME dictvalue
    (59) expression -> . expression COMPARE expression
    (60) expression -> . NOT expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression AND expression
    (63) expression -> . expression IN expression
    (64) expression -> . expression MODULO expression
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression TIMDIV expression
    (68) expression -> . IF expression THEN action_statement ELSE action_statement
    (70) expression -> . forall_header IN expression COLON action_statement
    (57) assign -> . CNAME EQUALS expression
    (58) assign -> . CNAME LSBRACK expression RSBRACK EQUALS expression
    (71) stringval -> . STRING
    (50) dictvalue -> . LCBRACK dictitems RCBRACK
    (51) dictvalue -> . LCBRACK RCBRACK
    (69) forall_header -> . FORALL CNAME

    CNAME           shift and go to state 74
    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 56
    MINUS           shift and go to state 48
    TRUE            shift and go to state 51
    FALSE           shift and go to state 55
    NONE            shift and go to state 58
    LSBRACK         shift and go to state 53
    NEWEVENT        shift and go to state 49
    NOT             shift and go to state 57
    IF              shift and go to state 44
    STRING          shift and go to state 18
    LCBRACK         shift and go to state 30
    FORALL          shift and go to state 50

    stringval                      shift and go to state 45
    calls                          shift and go to state 71
    action_statement               shift and go to state 72
    expression                     shift and go to state 73
    forall_header                  shift and go to state 59
    dictvalue                      shift and go to state 52
    assign                         shift and go to state 75

state 38

    (18) opt_rulename -> RULE CNAME NEWLINE .

    EVENT           reduce using rule 18 (opt_rulename -> RULE CNAME NEWLINE .)


state 39

    (58) assign -> CNAME LSBRACK . expression RSBRACK EQUALS expression
    (29) expression -> . expression POINT CNAME LPAREN expressionlist RPAREN
    (30) expression -> . expression POINT CNAME LPAREN RPAREN
    (31) expression -> . expression POINT CNAME
    (32) expression -> . CNAME LPAREN expressionlist RPAREN
    (33) expression -> . CNAME LPAREN RPAREN
    (36) expression -> . expression LSBRACK expression RSBRACK
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . CNAME
    (39) expression -> . NUMBER
    (40) expression -> . MINUS expression
    (41) expression -> . stringval
    (42) expression -> . TRUE
    (43) expression -> . FALSE
    (44) expression -> . NONE
    (45) expression -> . LSBRACK listitems RSBRACK
    (46) expression -> . LSBRACK RSBRACK
    (49) expression -> . dictvalue
    (56) expression -> . NEWEVENT CNAME dictvalue
    (59) expression -> . expression COMPARE expression
    (60) expression -> . NOT expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression AND expression
    (63) expression -> . expression IN expression
    (64) expression -> . expression MODULO expression
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression TIMDIV expression
    (68) expression -> . IF expression THEN action_statement ELSE action_statement
    (70) expression -> . forall_header IN expression COLON action_statement
    (71) stringval -> . STRING
    (50) dictvalue -> . LCBRACK dictitems RCBRACK
    (51) dictvalue -> . LCBRACK RCBRACK
    (69) forall_header -> . FORALL CNAME

    CNAME           shift and go to state 54
    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 56
    MINUS           shift and go to state 48
    TRUE            shift and go to state 51
    FALSE           shift and go to state 55
    NONE            shift and go to state 58
    LSBRACK         shift and go to state 53
    NEWEVENT        shift and go to state 49
    NOT             shift and go to state 57
    IF              shift and go to state 44
    STRING          shift and go to state 18
    LCBRACK         shift and go to state 30
    FORALL          shift and go to state 50

    stringval                      shift and go to state 45
    expression                     shift and go to state 76
    dictvalue                      shift and go to state 52
    forall_header                  shift and go to state 59

state 40

    (16) declaration -> DECLARE CNAME NEWLINE .
